# Raytracer

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: rust.yml
output/: example1.ppm  example2.ppm  example3.ppm
scenes/: animation.xml  chess.xml  cook-torrance.xml  depth_of_field.xml  dtd-test.xml  example1.xml  example2.xml  example3.xml  example4.xml  example5.xml  example6.xml  example7.xml  example8.xml  example9.xml  julia_animated.xml  julia_set.xml  scene.dtd  spotlight.xml  test.xml
src/: image.rs  lib.rs  main.rs  math.rs
src/image/: mod.rs
src/input/: arguments.rs  mod.rs  objparser.rs  serial_types.rs  xml.rs
src/math/: mat4.rs  mod.rs  quat.rs  ray.rs  util.rs  vec3.rs  vector3.rs
src/misc/: mod.rs  progress.rs
src/objects/: camera.rs  light.rs  mod.rs  scene.rs  sphere.rs  surface.rs
src/objects/surface/: intersection.rs  julia_set.rs  material.rs  mesh.rs  mod.rs  sphere.rs
src/scene/: camera.rs  light.rs  mod.rs  sphere.rs
