[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

[lib]
name = "lab3"
path = "src/lib.rs"

[dependencies]
png = "0.17.16"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.10.0"

[profile.release]
codegen-units = 1
lto = "fat"
