[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"
description = "A (whitted) Raytracer written in Rust that can render images and simple animations"
license = "MIT"
repository = "https://github.com/BelimFaux/Raytracer"
keywords = ["raytracing", "whitted-ray-tracing", "computer-graphics", "animations", "raytracing-one-weekend"]
categories = ["graphics", "rendering", "multimedia::images", "command-line-utilities"]

[lib]
name = "rt"
path = "src/lib.rs"

[dependencies]
png = "0.17.16"
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.10.0"
rand = "0.9.1"

[profile.release]
codegen-units = 1
lto = "fat"
